--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .section {
-  padding: 2% 0% 2% 0%;
+  padding: 1% 0% 1.5% 0%;
   gap: 3%;
   width: 100%;
 }
@@ -25,6 +25,11 @@ h2 {
 
 .colorNav {
   background-color: #DD5353;
+}
+
+.cardInicio {
+  width: 18rem;
+  margin-top: 2%;
 }
 
 /* FOOTER */
