--- a/style/style.scss
+++ b/style/style.scss
@@ -1,111 +1,118 @@
 .section {
-      padding: 2% 0% 2% 0%;
-      gap: 3%;
-      width: 100%;
+  padding: 1% 0% 1.5% 0%;
+  gap: 3%;
+  width: 100%;
 }
 
 .logo {
-      max-width: 20%;
+  max-width: 20%;
 }
 
 .titulo_logo {
-      display: flex;
-      align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 h2 {
-      margin: 0;
+  margin: 0;
 }
 
 .colorA {
-      color: black;
-      text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .colorNav {
-      background-color: #DD5353;
+  background-color: #DD5353;
 }
 
-
+.cardInicio {
+  width: 18rem;
+  margin-top: 2%;
+}
 
 /* FOOTER */
 
 body {
-      background-color: #DBC8AC;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      position: relative;
-      padding-bottom: 5%;
-      min-height: 100vh;
+  background-color: #DBC8AC;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-bottom: 5%;
+  min-height: 100vh;
 }
 
 .content {
-      min-height: 100%;
-      /* Aquí puedes añadir estilos adicionales para el contenido de tu sitio web */
+  min-height: 100%;
+  /* Aquí puedes añadir estilos adicionales para el contenido de tu sitio web */
 }
 
 .footer {
-      background-color: #DD5353;
-      padding: 10px;
-      text-align: center;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
+  background-color: #DD5353;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .footer-section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .footer-section h5 {
-      margin: 0;
+  margin: 0;
 }
 
 .footer-section img {
-      width: 30px;
-      height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 /* carrito */
 .imagenCarrito {
-      max-width: 100%;
+  max-width: 100%;
 }
 
 .sectionCarrito {
-      display: flex;
-      justify-content: center;
-      margin-top: 1%;
+  display: flex;
+  justify-content: center;
+  margin-top: 1%;
 }
 
 .mainCarrito {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.divCarritoImagen{
-      width: 12%
+
+.divCarritoImagen {
+  width: 12%
 }
+
 .listaCarrito {
-      display: flex;
-      flex-direction: row;
-      gap: 16px;
-      background-color: #DBC8AC;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  background-color: #DBC8AC;
 }
-.ulCarrito{
-      width: 55%;
-      margin-top: 2%;
+
+.ulCarrito {
+  width: 55%;
+  margin-top: 2%;
 }
 
 .listItemsCarrito {
-      border-color: #00000026;
-      background-color: #DBC8AC;
+  border-color: #00000026;
+  background-color: #DBC8AC;
 }
-.precioCarrito{
-      display: flex;
+
+.precioCarrito {
+  display: flex;
 }
