--- a/style/style.scss
+++ b/style/style.scss
@@ -22,6 +22,14 @@ h2 {
   text-decoration: none;
 }
 
+.UlNav{
+  gap: 7px;
+}
+
+.colorLiNav{
+  background-color: #DBC8AC;
+}
+
 .colorNav {
   background-color: #DD5353;
 }
@@ -81,8 +89,9 @@ body {
 
 .sectionCarrito {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-top: 1%;
+  align-items: center;
 }
 
 .mainCarrito {
